# hz_mcp

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  pyproject.toml
src/openai_mcp/: README.md  __init__.py  client.py  image_utils.py  r2_storage.py  server.py  services.py
